--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,12 @@
-{{#each users as |user| }}
-{{!-- <div class="row align-center mb-5">
-  <div class="col-md-6">
-    <h2>{{{get_emoji}}} {{user.name}}</h2>
-  </div>
-  <div class="col-md-6">
-    <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
-  </div>
-</div> --}}
+{{#each president}}
+<section class="container">
+<div class="divOne">
+  <h1 class="title">{{name}}</h1>
+  <h1 class="image">{{party}}</h1>
+  <h1 class="image">{{description}}</h1>
+  <h1 class="image">{{years_served}}</h1>
+  <h1 class="image">{{number}}</h1>
+  <h1 class="image">{{image}}</h1>
+</div>
+</section>
 {{/each}}
