--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,9 @@
-{{#each president}}
+{{#each basicPresData}}
 <section class="container">
 <div class="divOne">
   <h1 class="title">{{name}}</h1>
   <h1 class="image">{{party}}</h1>
-  <h1 class="image">{{description}}</h1>
+  <h1 class="image">{{{description}}}</h1>
   <h1 class="image">{{years_served}}</h1>
   <h1 class="image">{{number}}</h1>
   <h1 class="image">{{image}}</h1>
