--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,18 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
-  <title>Document</title>
+  <title>Presidential Database</title>
 </head>
 
 <body>
   <nav id="navBar">
-    <div id="navBarCenter">
       <span>
-        <h1>Blog Posts</h1>
+        <h1 id="navTitle">Presidential Database</h1>
       </span>
     </div>
   </nav>
-<div>{{{body}}}</div>
+<div id="mainContainer">{{{body}}}</div>
 </body>
 
 </html>
