--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-{{#each basicPresData}}
+{{#each presidents}}
 <section id="presContainer">
   <div>
   <img id="image" src="{{image}}" alt="President image">
