--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,10 @@
-<h2>Login</h2>
+<h2>Signup</h2>
 
 <form class="form login-form">
+  <div class="form-group">
+    <label for="email-login">name:</label>
+    <input class="form-input" type="text" id="name-login" />
+  </div>
   <div class="form-group">
     <label for="email-login">email:</label>
     <input class="form-input" type="text" id="email-login" />
@@ -10,8 +14,8 @@
     <input class="form-input" type="password" id="password-login" />
   </div>
   <div class="form-group">
-    <button class="btn btn-primary" type="submit">login</button>
+    <button class="btn btn-primary" type="submit">Signup</button>
   </div>
 </form>
 
-<script src="/js/login.js"></script>
+<script src="/js/signup.js"></script>
