--- a/views/president.handlebars
+++ b/views/president.handlebars
@@ -1,20 +1,22 @@
-<section id="presContainer">
-  <div>
-  <img id="image" src="{{pres.image}}" alt="President image">
-  </div>
-  <div>
-  <h1 id="name">{{pres.name}}</h1>
-  </div>
-  <div>
-  <h1 id="number">President: {{pres.number}}</h1>
-  </div>
-  <div>
-  <h1 id="party">Party: {{pres.party}}</h1>
-  </div>
-  <div>
-  <h1 id="years">Years Served: {{pres.years_served}}</h1>
-  </div>
-  <div>
-  <h1 id="description">{{pres.description}}</h1>
-  </div>
-</section>
+<div id="mainContainerSingle">
+  <section id="presContainer">
+    <div>
+    <img id="image" src="{{pres.image}}" alt="President image">
+    </div>
+    <div>
+    <h1 id="name">{{pres.name}}</h1>
+    </div>
+    <div>
+    <h1 id="number">President: {{pres.number}}</h1>
+    </div>
+    <div>
+    <h1 id="party">Party: {{pres.party}}</h1>
+    </div>
+    <div>
+    <h1 id="years">Years Served: {{pres.years_served}}</h1>
+    </div>
+    <div>
+    <h1 id="description">{{pres.description}}</h1>
+    </div>
+  </section>
+</div>
