--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
       <button id="button">Search</button>
     </div>
   </nav>
-  <div id="{{#if pres}}mainContainerSingle{{else}}mainContainerMultiple{{/if}}">{{{body}}}</div>
+  {{{body}}}
   <script src="/js/search.js"></script>
 </body>
 
