--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+<div class="login-page">
 <h2>Login</h2>
 
 <form class="form login-form">
@@ -15,3 +16,4 @@
 </form>
 
 <script src="/js/login.js"></script>
+</div>
