adding login button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,7 @@
         {{/each}}
       </datalist>
       <button id="button">Search</button>
+      <button id="button">login</button>
     </div>
   </nav>
   {{{body}}}
