--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,11 +63,6 @@ button{
   min-height: 100vh;
 }
 
-.login-page {
-  display: flex;
-  flex-direction: column;
-}
-
 #image {
   grid-area: image;
   border-radius: .5rem;
@@ -108,11 +103,55 @@ button{
   padding: 1rem;
 }
 
+.login-page, .signup-page {
+  background-color: var(--offset);
+  min-height: 100vh;
+  padding: 1rem 10rem;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group label {
+  flex: none;
+  display: block;
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding: 0.5rem 0;
+}
+
+.form-group .form-input {
+  flex: 1 1 100%;
+  display: block;
+  margin-bottom: 10px;
+  border: 0;
+  line-height: 1.5rem;
+}
+
+.form-group .form-submit-btn {
+  height: 50px;
+  border: none;
+  font-size: 1rem;
+  margin-top: 1.5rem;
+}
+.form-group .form-submit-btn:hover {
+  background-color: var(--secondary);
+}
+
 @media screen and (max-width: 812px) {
   #mainContainerMultiple {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+@media screen and (max-width: 768px) {
+  .login-page, .signup-page {
+    padding: 1rem 5rem;
+  }
+}
+
 @media screen and (max-width: 400px) {
   #mainContainerMultiple {
     grid-template-columns: repeat(2, 1fr);
