--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,21 +1,28 @@
-<h2>Signup</h2>
+<div class="signup-page">
+  <h2>Signup</h2>
 
-<form class="form login-form">
-  <div class="form-group">
-    <label for="email-login">name:</label>
-    <input class="form-input" type="text" id="name-login" />
-  </div>
-  <div class="form-group">
-    <label for="email-login">email:</label>
-    <input class="form-input" type="text" id="email-login" />
-  </div>
-  <div class="form-group">
-    <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
-  </div>
-  <div class="form-group">
-    <button class="btn btn-primary" type="submit">Signup</button>
-  </div>
-</form>
+  <form class="form login-form">
+    <div class="form-group">
+      <label for="email-signup">name:</label>
+      <input class="form-input" type="text" id="name-signup" />
+    </div>
+    <div class="form-group">
+      <label for="email-signup">email:</label>
+      <input class="form-input" type="text" id="email-signup" />
+    </div>
+    <div class="form-group">
+      <label for="password-signup">password:</label>
+      <input class="form-input" type="password" id="password-signup" />
+    </div>
+  
+    <div class="form-group">
+      <label for="password-confirm-signup">password confirm:</label>
+      <input class="form-input" type="password" id="password-confirm-signup" />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary form-submit-btn" type="submit">Sign-up</button>
+    </div>
+  </form>
+</div>
 
 <script src="/js/signup.js"></script>
