page header styles in login and sign up along with other styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,6 +109,11 @@ button{
   padding: 1rem 10rem;
 }
 
+.login-page .page-header, .signup-page .page-header {
+  text-align: center;
+  font-size: 2rem;
+}
+
 .form-group {
   display: flex;
   flex-direction: column;
