--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <div class="signup-page">
-  <h2>Signup</h2>
+  <h2 class="page-header">Sign-up</h2>
 
   <form class="form login-form">
     <div class="form-group">
