--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="login-page">
-<h2>Login</h2>
+<h2 class="page-header">Login</h2>
 
 <form class="form login-form">
   <div class="form-group">
