--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,20 +3,20 @@
 
   <form class="form login-form">
     <div class="form-group">
-      <label for="email-signup">name:</label>
+      <label for="email-signup">Name:</label>
       <input class="form-input" type="text" id="name-signup" />
     </div>
     <div class="form-group">
-      <label for="email-signup">email:</label>
+      <label for="email-signup">Email:</label>
       <input class="form-input" type="text" id="email-signup" />
     </div>
     <div class="form-group">
-      <label for="password-signup">password:</label>
+      <label for="password-signup">Password:</label>
       <input class="form-input" type="password" id="password-signup" />
     </div>
   
     <div class="form-group">
-      <label for="password-confirm-signup">password confirm:</label>
+      <label for="password-confirm-signup">Password Confirm:</label>
       <input class="form-input" type="password" id="password-confirm-signup" />
     </div>
     <div class="form-group">
