--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,16 +8,16 @@
     <h1 id="name">{{name}}</h1>
     </div>
     <div>
-    <h1 id="number">President: {{number}}</h1>
+    <h2 id="number">{{number}}</h2>
     </div>
     <div>
-    <h1 id="party">Party: {{party}}</h1>
+    <h2 id="party">{{party}}</h2>
     </div>
     <div>
-    <h1 id="years">Years Served: {{years_served}}</h1>
+    <h2 id="years">Served {{years_served}} years</h2>
     </div>
     <div>
-    <h1 id="description">{{description}}</h1>
+    <h2 id="description">{{description}}</h2>
     </div>
   </section>
   {{/each}}
