--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Luxurious+Roman&display=swap');
+
 html, * {
   padding: 0;
   margin: 0; 
   box-sizing: border-box;
   color: var(--text);
 }
+
 
 :root {
   --main: #999FAD;
@@ -17,6 +20,8 @@ body {
 }
 
 #navBar {
+  font-family: 'Luxurious Roman', cursive;
+  font-family: 'Lora', serif;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
@@ -25,14 +30,28 @@ body {
   background-color: var(--main)
 }
 
+#navBar > div > h1 {
+  font-size: 5rem;
+}
+
 input{
-  padding: .3rem;
+  padding: .3rem 2rem;
   border-radius: .3rem;
+  margin-bottom: .3rem;
 }
 
 button{
   padding: .2rem;
   border-radius: .3rem;
+  margin: 0 2rem;
+  background-color: var(--secondary);
+  transition: 1s color;
+  transition: 1s background-color;
+}
+
+button:hover{
+  background-color: var(--text);
+  color: var(--secondary);
 }
 
 #navTitle {
@@ -42,7 +61,7 @@ button{
 
 #mainContainerMultiple {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: min-content;
   justify-items: center;
   row-gap: 2rem;
@@ -72,7 +91,10 @@ button{
 
 #name {
   grid-area: name;
+  font-family: 'Lora', serif;
+  font-size: 2rem;
   height: min-content;
+  border-bottom: .1rem solid var(--text);
 }
 
 #number {
@@ -82,10 +104,14 @@ button{
 
 #description {
   grid-area: description;
+  font-family: 'Lora', serif;
+  padding-top: 1.5rem;
+  border-top: .1rem solid var(--text);
 }
 
 #party {
   grid-area: party;
+
 }
 
 #years {
@@ -97,10 +123,14 @@ button{
   display: grid;
   grid-template-rows: repeat(6, min-content);
   justify-items: center;
+  border-width: .1rem;
+  border-color: var(--text);
+  border-style: solid;
   row-gap: 1rem;
   background-color: var(--secondary);
   border-radius: .5rem;
   padding: 1rem;
+  box-shadow: .2rem .2em 1rem var(--text)
 }
 
 .login-page, .signup-page {
@@ -159,6 +189,6 @@ button{
 
 @media screen and (max-width: 400px) {
   #mainContainerMultiple {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
