--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lora&family=Luxurious+Roman&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
-  <title>Presidential Database</title>
+  <a href="http://localhost:3001/">
+    <title>Presidential Database</title>
+  </a>
 </head>
 
 <body>
