styling edits on signup login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,7 +134,7 @@ button:hover{
 }
 
 .login-page, .signup-page {
-  background-color: var(--offset);
+  background-color: var(--secondary);
   min-height: 100vh;
   padding: 1rem 10rem;
 }
@@ -142,6 +142,11 @@ button:hover{
 .login-page .page-header, .signup-page .page-header {
   text-align: center;
   font-size: 2rem;
+}
+
+.login-page .login-form, .signup-page .signup-form {
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .form-group {
@@ -170,6 +175,7 @@ button:hover{
   border: none;
   font-size: 1rem;
   margin-top: 1.5rem;
+  background-color: var(--main);
 }
 .form-group .form-submit-btn:hover {
   background-color: var(--secondary);
