--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <div class="signup-page">
   <h2 class="page-header">Sign-up</h2>
 
-  <form class="form login-form">
+  <form class="form signup-form">
     <div class="form-group">
       <label for="email-signup">Name:</label>
       <input class="form-input" type="text" id="name-signup" />
