--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,10 +5,10 @@
     <img id="image" src="{{image}}" alt="President image">
     </div>
     <div>
-    <h1 id="name">{{name}}</h1>
+    <a href="/president/{{id}}"><h1 id="name">{{name}}</h1></a>
     </div>
     <div>
-    <h2 id="number">{{number}}</h2>
+    <h2 id="number">{{ordinal number}} President</h2>
     </div>
     <div>
     <h2 id="party">{{party}}</h2>
