--- a/views/president.handlebars
+++ b/views/president.handlebars
@@ -7,13 +7,13 @@
     <h2 id="name">{{pres.name}}</h2>
     </div>
     <div>
-    <h2 id="number">President: {{pres.number}}</h2>
+    <h2 id="number">{{pres.number}}</h2>
     </div>
     <div>
-    <h2 id="party">Party: {{pres.party}}</h2>
+    <h2 id="party">{{pres.party}}</h2>
     </div>
     <div>
-    <h2 id="years">Years Served: {{pres.years_served}}</h2>
+    <h2 id="years">Served {{pres.years_served}} years</h2>
     </div>
     <div>
     <h2 id="description">{{pres.description}}</h2>
