--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,9 @@
       <button id="logoutButton">logout</button>
       {{else}}
       <a href="/login"><button id="logButton" class="navBtn">login</button></a>
+      <a href="/signup"><button id="signupButton" class="navBtn">signup</button></a>
       {{/if}}
+      
     </div>
   </nav>
   {{{body}}}
