--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&family=Luxurious+Roman&display=swap');
 
+* {
+  font-family: 'Lora', serif;
+}
+
 html, * {
   padding: 0;
   margin: 0; 
@@ -59,7 +63,6 @@ a {
 
 #navTitle {
   /* font-family: 'Luxurious Roman', cursive; */
-  font-family: 'Lora', serif;
   flex-basis: 100%;
   font-size: 3rem;
   cursor: pointer;
@@ -102,7 +105,6 @@ a {
 
 #name {
   grid-area: name;
-  font-family: 'Lora', serif;
   font-size: 2rem;
   height: min-content;
   border-bottom: .1rem solid var(--text);
@@ -115,7 +117,6 @@ a {
 
 #description {
   grid-area: description;
-  font-family: 'Lora', serif;
   padding-top: 1.5rem;
   border-top: .1rem solid var(--text);
 }
@@ -189,7 +190,7 @@ a {
   background-color: var(--main);
 }
 .form-group .form-submit-btn:hover {
-  background-color: var(--secondary);
+  color: var(--secondary);
 }
 
 @media screen and (max-width: 812px) {
