--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
     </div>
     <div class="searchBar">
       <form>
-        <input name="color" id="input" list="presData" />
+        <input name="color" id="input" list="presData" class="search-bar"/>
       </form>
       <datalist id="presData">
         {{#each presidents}}
