--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
     <div>
       <a href="/"><h1 id="navTitle">Presidential Database</h1></a>
     </div>
-    <div class="searchBar">
+    <div class="search-bar-container">
       <form>
         <input name="color" id="input" list="presData" class="search-bar"/>
       </form>
