fixed wording on single pres page

--- a/views/president.handlebars
+++ b/views/president.handlebars
@@ -7,7 +7,7 @@
     <h2 id="name">{{pres.name}}</h2>
     </div>
     <div>
-    <h2 id="number">{{pres.number}}</h2>
+    <h2 id="number">{{ordinal pres.number}} President</h2>
     </div>
     <div>
     <h2 id="party">{{pres.party}}</h2>
