--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
       </datalist>
       <button id="button" class="navBtn">Search</button>
       {{#if loggedIn}}
-      <button id="logoutButton">logout</button>
+      <button id="logoutButton" class="navBtn">logout</button>
       {{else}}
       <a href="/login"><button id="logButton" class="navBtn">login</button></a>
       <a href="/signup"><button id="signupButton" class="navBtn">signup</button></a>
