updated README w/ links and visuals, renamed to Presedential Gallery

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,13 +11,13 @@
     href="https://fonts.googleapis.com/css2?family=Lora&family=Luxurious+Roman&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
-    <title>Presidential Database</title>
+    <title>Presidential Gallery</title>
 </head>
 
 <body>
   <nav id="navBar">
     <div>
-      <a href="/"><h1 id="navTitle">Presidential Database</h1></a>
+      <a href="/"><h1 id="navTitle">Presidential Gallery</h1></a>
     </div>
     <div class="search-bar-container">
       <form>
